--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   margin: 0;
   height: 100vh;
   font-size: 1.6rem;
-  font-family: iranyekan;
+  font-family: iranyekan !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -61,8 +61,8 @@ body {
   color: #ffb317; /*Set to match the Tailwind colour you want the active one to be */
 }
 
-#main>.swiper-button-next,
-#main>.swiper-button-prev {
+#main > .swiper-button-next,
+#main > .swiper-button-prev {
   width: 49px !important;
   height: 90px !important;
   border-radius: 0px 5px 5px 0px;
@@ -89,6 +89,7 @@ body {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+  width: auto;
 }
 
 .swiper-slide img {
@@ -111,6 +112,10 @@ body {
 @media screen and (max-width: 480px) {
   #main.swiper-container {
     width: 100%;
+  }
+  #main > .swiper-button-next,
+  #main > .swiper-button-prev {
+    display: none;
   }
 }
 
@@ -143,7 +148,7 @@ body {
   margin: auto;
 }
 
-.product-card:hover .card-actions{
+.product-card:hover .card-actions {
   display: flex;
 }
 
@@ -172,7 +177,6 @@ body {
 }
 
 .react-tabs__tab--selected {
-  
   color: black;
   border-radius: 5px 5px 0 0;
   border-bottom: 3px solid blue;
@@ -184,7 +188,6 @@ body {
 }
 
 .react-tabs__tab:focus {
-  
   outline: none;
 }
 
@@ -205,7 +208,6 @@ body {
   display: block;
 }
 
-
-.drawer-scrollbar::-webkit-scrollbar{
+.drawer-scrollbar::-webkit-scrollbar {
   display: none;
 }
