--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,26 @@ body {
   top: 40% !important;
 }
 
+
+#desktopCarousel > .swiper-button-prev {
+  color: black;
+  right: 8%;
+  top: 80% !important;
+}
+
+#desktopCarousel > .swiper-button-next{
+  color: black;
+  right: 11%;
+  top: 80% !important;
+
+}
+
+#desktopCarousel > .swiper-pagination{
+  text-align:right;
+  right: 7%;
+  top: 70% !important;
+}
+
 .swiper-slide {
   text-align: center;
   font-size: 18px;
