--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ html {
 body {
   background-color: #f5f5f5;
   margin: 0;
-  height: 100vh;
+  min-height: 100vh;
   font-size: 1.6rem;
   font-family: iranyekan !important;
   -webkit-font-smoothing: antialiased;
