create shipping modal

--- a/src/index.css
+++ b/src/index.css
@@ -266,3 +266,15 @@ footer .collapse-arrow .collapse-title:after {
 .product-card:hover .card-actions{
   display: flex;
 }
+
+.floating-input>input::placeholder {
+  color: transparent;
+}
+.floating-input>input:focus,
+.floating-input>input:not(:placeholder-shown) { 
+@apply pt-8
+}
+.floating-input>input:focus~label, 
+.floating-input>input:not(:placeholder-shown)~label {
+@apply opacity-75 scale-75 -translate-y-3 translate-x-1; 
+}
