create filter boxes

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -384,3 +384,22 @@ footer .collapse-arrow .collapse-title:after {
   pointer-events: all;
   position: relative;
 }
+
+
+.brand-container::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+.brand-container::-webkit-scrollbar
+{
+	width: 4px;
+	background-color: #F5F5F5;
+}
+
+.brand-container::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+	border: 2px solid #555555;
+}
